Fix overflow issue

--- a/src/styles/components/page.scss
+++ b/src/styles/components/page.scss
@@ -100,6 +100,8 @@
 
 @media (min-width: 1024px) {
   .page {
+    overflow: hidden;
+
     &::before,
     &::after {
       animation-duration: .7s;
